[package]
name = "associative_array"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
libc = "0.2.183"
memmap2 = "0.9.10"


[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3"]

[profile.release]
opt-level = 3
incremental = false 
lto = "fat"
codegen-units = 1
panic = "abort"

