[package]
name = "associative_array"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossbeam-epoch = "0.9.18"
libc = "0.2.183"
memmap2 = "0.9.10"


[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3"]

[profile.release]
opt-level = 3 # full llvm optimizations
incremental = false # turns off incremental build overhead 
lto = "fat" # link time optizations for non flattend modules & crates 
codegen-units = 1 # forces single threaded compilation for best optimizations
panic = "abort" # tells rust not to panic gracefully(destructors) and just crashes

